fixed a small layout issue in owned instance when weight and height are null

--- a/frontend/src/features/Collect/InstanceOverlayComponents/OwnedInstance.css
+++ b/frontend/src/features/Collect/InstanceOverlayComponents/OwnedInstance.css
@@ -146,7 +146,8 @@
 
 .owned-instance .stats-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  gap: 20px;
   width: 100%;
 }
 
